# fit2tp

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
src/: main.rs
