[package]
name = "fit2tp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.0.20", features = ["derive"] }
clap_complete = "4.0.6"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
futures-util = "0.3"
base64 = "0.22"
indicatif = "0.17.3"
tokio-stream = "0.1.17"
fitparser = "0.9.0"
rayon = "1.10.0"
lazy_static = "1.5.0"